--- a/pair_setencias_de_control_rebeca_enriquez_Beatriz.ipynb
+++ b/pair_setencias_de_control_rebeca_enriquez_Beatriz.ipynb
@@ -117,33 +117,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'builtin_function_or_method' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m lista_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m15\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m33\u001b[39m, \u001b[38;5;241m65\u001b[39m, \u001b[38;5;241m89\u001b[39m, \u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m indice \u001b[38;5;241m=\u001b[39m lista_num[\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m)\u001b[49m]\n\u001b[0;32m      3\u001b[0m num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m lista_num[indice]:\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
-   "source": [
-    "lista_num = [5, 15, 20, 33, 65, 89, 10]\n",
-    "indice = lista_num[range(len)]\n",
-    "num2 = 0\n",
-    "\n",
-    "for n in lista_num[indice]:\n",
-    "    num2 = num2 * n\n",
-    "    print(num2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -281,26 +254,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]\n"
      ]
     }
    ],
    "source": [
     "lista1 = []\n",
     "\n",
-    "for e in range(1,51):\n",
-    "    if e >=1:\n",
-    "        if e%e == 1 or e%e == e:\n",
+    "for e in range(1, 51):\n",
+    "    if e > 1:\n",
+    "        es_primo = True\n",
+    "        for i in range(2, e):  \n",
+    "            if e % i == 0:\n",
+    "                es_primo = False\n",
+    "                break\n",
+    "        if es_primo:\n",
     "            lista1.append(e)\n",
+    "\n",
     "print(lista1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -552,13 +538,6 @@
     "print(lista_nombres)\n",
     "print(nombre)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
