--- a/promog-modulo1- sprint2- pair programing-leccion1-funciones- Rebeca y Beatriz.ipynb
+++ b/promog-modulo1- sprint2- pair programing-leccion1-funciones- Rebeca y Beatriz.ipynb
@@ -1,43 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PAIR PROGRAMMING FUNCIONES\n",
-    "1. Calcular el área de un círculo.\n",
-    "Descripción: Crea una función llamada calcular_area_circulo que tome el radio como parámetro y devuelva el área del círculo.\n",
-    "NOTA: Os dejamos aquí un link para recordar comose calculaba el área de un círculo.\n",
-    "Contar la cantidad de caracteres en una cadena.\n",
-    "Descripción: Crea una función llamada contar_caracteres que tome una cadena como parámetro y devuelva la cantidad de caracteres que contiene.\n",
-    "Determinar si una cadena es un palíndromo.\n",
-    "Descripción: Crea una función llamada es_palindromo que tome una cadena como parámetro y devuelva True si es un palíndromo, o False si no lo es.\n",
-    "¿Qué es un palíndromo?.\n",
-    "Calcular el promedio de una lista de números.\n",
-    "Descripción: Crea una función llamada calcular_promedio que tome una lista de números como parámetro y devuelva el promedio de todos sus elementos.\n",
-    "Calcular el interés compuesto.\n",
-    "Descripción: Crea una función llamada calcular_interes_compuesto que tome el capital inicial, la tasa de interés y el número de períodos como parámetros y devuelva el beneficio final después del interés compuesto.\n",
-    "Validar si una palabra es un anagrama de otra.\n",
-    "Descripción: Crea una función llamada es_anagrama que tome dos palabras como parámetros y devuelva True si una es un anagrama de la otra, o False si no lo es.\n",
-    "¿Qué es un anagrama?.\n",
-    "Validar si una cadena de texto es un isograma.\n",
-    "Descripción: Crea una función llamada es_isograma que tome una cadena de texto como parámetro y devuelva True si es un isograma. En caso contrario, devuelve False.\n",
-    "¿Qué es un isograma? Una palabra que no contiene letras repetidas.\n",
-    "Concatenar múltiples cadenas de texto\n",
-    "Descripción: Crea una función llamada concatenar_cadenas que tome una cantidad variable de cadenas de texto como argumentos y devuelva una única cadena que contenga la concatenación de todas las cadenas ingresadas.\n",
-    "Crear un diccionario con información de una persona.\n",
-    "Descripción: Crea una función llamada crear_persona que tome como argumentos clave-valor los datos de una persona, como nombre, edad, ciudad, etc., y devuelva un diccionario con toda la información ingresada.\n",
-    "Encontrar el número que falta en una lista ordenada de números consecutivos.\n",
-    "Descripción: Crea una función llamada encontrar_numero_faltante que tome una lista de números consecutivos (del 1 al N, sin repetir) con un número faltante y devuelva ese número faltante.\n",
-    "Encontrar el elemento duplicado en una lista de números.\n",
-    "Descripción: Crea una función llamada encontrar_duplicado que tome una lista de números enteros y devuelva el elemento que está duplicado en la lista."
+    "PAIR PROGRAMMING FUNCIONES - REBECA Y BEATRIZ"
    ]
   },
   {
@@ -262,6 +229,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,20 +244,41 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "9.Crear un diccionario con información de una persona.\n",
-    "Descripción: Crea una función llamada crear_persona que tome como argumentos clave-valor los datos de una persona, como nombre, edad, ciudad, etc., y devuelva un diccionario con toda la información ingresada."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10.Encontrar el número que falta en una lista ordenada de números consecutivos.\n",
+    "9. Crear un diccionario con información de una persona.\n",
+    "Descripción: Crea una función llamada crear_persona que tome como argumentos clave-valor los datos de una persona, como nombre, edad, ciudad, etc., y devuelva un diccionario con toda la información ingresada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 10. Encontrar el número que falta en una lista ordenada de números consecutivos.\n",
     "Descripción: Crea una función llamada encontrar_numero_faltante que tome una lista de números consecutivos (del 1 al N, sin repetir) con un número faltante y devuelva ese número faltante."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
