--- a/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PAIR PROGRAMMING Expresiones Regulares"
+    "# PAIR PROGRAMMING Expresiones Regulares"
    ]
   },
   {
@@ -18,6 +18,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(123) 456-7890\n",
+      "No es correcto 178 1890-733\n",
+      "(555) 238-1987\n",
+      "No es correcto (123) 4560-7890\n",
+      "No es correcto (ABC) 098-1111\n"
+     ]
+    }
+   ],
+   "source": [
+    "telefonos = [\"(123) 456-7890\", \"178 1890-733\", \"(555) 238-1987\", \"(123) 4560-7890\", \"(ABC) 098-1111\"]\n",
+    "patron1 = r\"\\(\\d{3}\\) \\d{3}-\\d{4}\"\n",
+    "\n",
+    "for el in telefonos:\n",
+    "    if re.findall(patron1, el):\n",
+    "        print(el)\n",
+    "    else:\n",
+    "        print(\"No es correcto\", el)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,6 +62,25 @@
     "Descripción: Encontrar todas las direcciones de correo electrónico presentes en una cadena de texto.\n",
     "Probad con el siguiente string:\n",
     "texto = \"Mi correo es user@example.com. Contacta conmigo en john.doe@email.com\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las direcciones de correo electronico: ['user@example.com', 'john.doe@email.com']\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = \"Mi correo es user@example.com. Contacta conmigo en john.doe@email.com\"\n",
+    "patron2 = re.findall(r\"\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}\\b\", texto)\n",
+    "print(\"Las direcciones de correo electronico:\", patron2)"
    ]
   },
   {
@@ -38,6 +94,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345\n",
+      "78409\n",
+      "19305\n"
+     ]
+    }
+   ],
+   "source": [
+    "codigos_postales = [\"12345\", \"190037\", \"78409\", \"986449\", \"19305\"]\n",
+    "patron3 = \"\\d{5}\"\n",
+    "for el in codigos_postales:\n",
+    "        if re.findall(patron3, el):\n",
+    "            if len(el) <=5:\n",
+    "                print(el)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,6 +125,28 @@
     "Descripción: Encontrar todas las palabras en un texto que comienzan con una vocal (a, e, i, o, u).\n",
     "Probad con el siguiente string:\n",
     "texto = \"El perro está ladrando. Ana tiene una manzana. La casa es grande.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['El', 'está', 'Ana', 'una', 'es']\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = \"El perro está ladrando. Ana tiene una manzana. La casa es grande.\"\n",
+    "patron4 = r'\\b[aeiouAEIOU]\\w*\\b'\n",
+    "\n",
+    "palabras_encontradas = re.findall(patron4, texto)\n",
+    "\n",
+    "print(palabras_encontradas)\n"
    ]
   },
   {
@@ -58,6 +160,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#deporte', '#FelizViernes', '#Tech2022']\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = \"Me encanta el #deporte. #FelizViernes a todos. Estoy en la conferencia #Tech2022.\"\n",
+    "patron5 = r'\\#\\w+'\n",
+    "hashtags = re.findall(patron5, texto)\n",
+    "\n",
+    "print(hashtags)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +188,28 @@
     "Descripción: Encontrar todos los números decimales presentes en una cadena de texto.\n",
     "Probad con el siguiente string:\n",
     "texto = \"El precio es $19.99. La temperatura es 25.5°C. El índice de inflación es del 2.5%.\"     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeros decimales: ['19.99', '25.5', '2.5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = \"El precio es $19.99. La temperatura es 25.5°C. El índice de inflación es del 2.5%.\"\n",
+    "patron6 = r'\\b\\d+\\.\\d+\\b'\n",
+    "\n",
+    "numeros_decimales = re.findall(patron6, texto)\n",
+    "\n",
+    "print(\"Numeros decimales:\", numeros_decimales)"
    ]
   },
   {
@@ -78,6 +223,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "juan_doe123\n",
+      "lola_12\n",
+      "12marta_lopez\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_usuarios = [\"juan_doe123\", \"lola_12\", \"Aurora_23\", \"12marta_lopez\"]\n",
+    "\n",
+    "patron7 = r\"^[a-z0-9_]+$\"\n",
+    "\n",
+    "\n",
+    "for el in lista_usuarios:\n",
+    "    if re.findall(patron7, el):\n",
+    "        print(el)\n",
+    "    else:\n",
+    "        print(\"No es valido\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,6 +258,29 @@
     "Descripción: Encontrar todas las fechas válidas en formato \"dd/mm/aaaa\" presentes en una cadena de texto.\n",
     "Probad con el siguiente string:\n",
     "texto = \"La fecha límite es el 31/12/2022. Hoy es 01/01/2023. Cumpleaños: 15/05/1990.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las fechas  son:  ['31/12/2022', '01/01/2023', '15/05/1990']\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = \"La fecha límite es el 31/12/2022. Hoy es 01/01/2023. Cumpleaños: 15/05/1990.\"\n",
+    "\n",
+    "patron8 = \"\\d{2}/\\d{2}/\\d{4}\"\n",
+    "\n",
+    "fechas = re.findall(patron8, texto)\n",
+    "\n",
+    "print(\"Las fechas  son: \", fechas)"
    ]
   },
   {
@@ -98,6 +294,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola cómo estás Todo bien\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto = '¡Hola, cómo estás? ¿Todo bien?'\n",
+    "\n",
+    "patron9 = r'[^a-zA-Z0-9\\sáéíóúÁÉÍÓÚüÜ]'\n",
+    "\n",
+    "cadena = re.sub(patron9, \"\", texto)\n",
+    "\n",
+    "print(cadena)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,11 +325,40 @@
     "Probad con este string:\n",
     "texto = 'El nombre del cliente es John Doe y su dirección es 123 Main Street.'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = 'El nombre del cliente es John Doe y su dirección es 123 Main Street.'\n",
+    "\n",
+    "patron10 =  \n",
+    "\n",
+    "cadena_informacion = re.sub(patron10, \"*\", texto)\n",
+    "\n",
+    "print(cadena_informacion)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
