--- a/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
@@ -55,6 +55,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(123) 456-7890\n",
+      "No es valido\n",
+      "(555) 238-1987\n",
+      "No es valido\n",
+      "No es valido\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Otra opción de resolucion:\n",
+    "for el in telefonos:\n",
+    "    if re.match(patron1, el):\n",
+    "        print(el)\n",
+    "    else:\n",
+    "        print(\"No es valido\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +141,38 @@
     "        if re.findall(patron3, el):\n",
     "            if len(el) <=5:\n",
     "                print(el)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['12345', '78409', '19305']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Otra opción de resolución:\n",
+    "codigos_postales = [\"12345\", \"190037\", \"78409\", \"986449\", \"19305\"]\n",
+    "patron13 = \"^\\d{5}$\"\n",
+    "\n",
+    "codigos_validos = []\n",
+    "\n",
+    "for cod in codigos_postales:\n",
+    "    objetivo = re.findall(patron13, cod)\n",
+    "    \n",
+    "    if len(objetivo) != 0:\n",
+    "        codigos_validos.append(objetivo[0])\n",
+    "        \n",
+    "codigos_validos"
    ]
   },
   {
