--- a/promog-modulo1-sprint2-pair programming-leccion06-funciones- Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion06-funciones- Rebeca-Beatriz.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PAIR PROGRAMMING Funciones"
+    "# PAIR PROGRAMMING - Funciones"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#1. Calcular el área de un círculo.\n",
+    "1. Calcular el área de un círculo.\n",
     "Descripción: Crea una función llamada calcular_area_circulo que tome el radio como parámetro y devuelva el área del círculo.\n",
     "NOTA: Os dejamos aquí un link para recordar comose calculaba el área de un círculo."
    ]
@@ -39,13 +39,8 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "3. Contar la cantidad de caracteres en una cadena.\n",
+    "2. Contar la cantidad de caracteres en una cadena.\n",
     "Descripción: Crea una función llamada contar_caracteres que tome una cadena como parámetro y devuelva la cantidad de caracteres que contiene."
    ]
   },
@@ -209,19 +204,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def es_anagrama():\n",
-    "\n",
-    "    palabra_invertida = list(palabra1)\n",
-    "    palabra_invertida.reverse()\n",
-    "\n",
-    "    palabra_invertida1 = \"\".join(palabra_invertida)\n",
-    "\n",
-    "    if palabra1 == palabra_invertida1:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "\n",
     "#¿Que es un anagrama?: Es una palabra o frase formada reorganizando las letras de otra palabra o frase utilizando todas las letras originales exactamente una vez. Alguno de los ejemplos son: \"roma\" y \"amor\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def es_anagrama(palabra10, palabra11):\n",
+    "\n",
+    "    # Ordenar las letras de ambas palabras\n",
+    "    palabra10_ordenada = sorted(palabra10)\n",
+    "    palabra11_ordenada = sorted(palabra11)\n",
+    "\n",
+    "    # Comparar si las palabras ordenadas son iguales\n",
+    "    if palabra10_ordenada == palabra11_ordenada:\n",
+    "        return f\"{palabra10} y {palabra11} son anagramas.\"\n",
+    "\n",
+    "    else:\n",
+    "        return f\"{palabra10} y {palabra11} no son anagramas.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amor y carne no son anagramas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(es_anagrama(\"amor\", \"carne\"))"
    ]
   },
   {
@@ -238,7 +258,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#¿Que es un isograma?: es una palabra en la que ninguna letra se repite más de una vez. En otras palabras, es una cadena de texto en la que cada letra aparece solo una vez. Los isogramas son útiles en diversos contextos, como en juegos de palabras, criptografía y análisis lingüístico. Por ejemplo, la palabra \"murciélago\" es un isograma porque cada letra (m, u, r, c, i, é, l, a, g, o) aparece solo una vez. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def es_isograma(palabra):\n",
+    "    \n",
+    "    palabra_lista = list(palabra)\n",
+    "    \n",
+    "    for l in palabra_lista:\n",
+    "        if palabra_lista.count(l) >1:\n",
+    "            return \"no es un isograma\"\n",
+    "        else:\n",
+    "            return \"es un isograma\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "es un isograma\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(es_isograma(\"murcielago\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +306,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def concatenar_cadenas(*args):\n",
+    "        \n",
+    "    cadena_unica = \" \".join(args)\n",
+    " \n",
+    "    return cadena_unica\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola Esto Es una prueba\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(concatenar_cadenas(\"hola\",\"Esto\",\"Es una prueba\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,10 +344,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def crear_persona(**kwargs):\n",
+    "    \n",
+    "    return kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nombre': 'rebeca', 'edad': 30, 'cuidad': 'Madrid', 'profesion': 'Informática'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(crear_persona(nombre=\"rebeca\", edad=30, cuidad=\"Madrid\",profesion=\"Informática\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,10 +380,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def encontrar_numero_faltante(lista_num):\n",
+    "    \n",
+    "    longitud = len(lista_num)\n",
+    "    \n",
+    "    for m in range(1,longitud+1):\n",
+    "        if m not in lista_num:\n",
+    "            return f\"El número faltante en la lista es:\", m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('El número faltante en la lista es:', 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encontrar_numero_faltante([1,2,3,4,5,6,7,8,9,11,12,13,14]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,53 +420,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_repetidos(lista_num):\n",
+    "\n",
+    "    lista_numeros1= []\n",
+    "\n",
+    "    for num in lista_num:\n",
+    "        if num not in lista_numeros1:\n",
+    "            lista_numeros1.append(num)\n",
+    "        else:\n",
+    "            return num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
       "2\n"
      ]
     }
    ],
    "source": [
-    "lista_num_duplicados = [1,2,3,4,5,6,7,2]\n",
-    "\n",
-    "lista_num = []\n",
-    "\n",
-    "for num in lista_num_duplicados:\n",
-    "    if num not in lista_num_duplicados:\n",
-    "        lista_num.append(num)\n",
-    "    else:\n",
-    "        print(num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def num_repetidos(lista_num):\n",
-    "    lista_num_duplicados = [1,2,3,4,5,6,7,2]\n",
-    "\n",
-    "    lista_num = []\n",
-    "\n",
-    "    for num in lista_num_duplicados:\n",
-    "        if num not in lista_num_duplicados:\n",
-    "            lista_num.append(num)\n",
-    "        else:\n",
-    "            print(num)\n",
-    "    return lista_num"
+    "print(num_repetidos([1,2,3,4,5,6,7,2]))"
    ]
   }
  ],
@@ -361,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
