--- a/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PAIR PROGRAMMING Expresiones Regulares"
+    "# PAIR PROGRAMMING - Expresiones Regulares"
    ]
   },
   {
@@ -392,7 +392,9 @@
    "source": [
     "texto = 'El nombre del cliente es John Doe y su dirección es 123 Main Street.'\n",
     "\n",
-    "patron10 =  \n",
+    "patron10 = \n",
+    "\n",
+    "patron11 = \n",
     "\n",
     "cadena_informacion = re.sub(patron10, \"*\", texto)\n",
     "\n",
@@ -416,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
