--- a/promog-modulo1-sprint2-pair programming-leccion05-sentencias_de_control_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion05-sentencias_de_control_Rebeca-Beatriz.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,33 +114,6 @@
     "for n in lista_num:\n",
     "    num2 = num2 * n\n",
     "    print(num2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'builtin_function_or_method' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m lista_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m15\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m33\u001b[39m, \u001b[38;5;241m65\u001b[39m, \u001b[38;5;241m89\u001b[39m, \u001b[38;5;241m10\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m indice \u001b[38;5;241m=\u001b[39m lista_num[\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m)\u001b[49m]\n\u001b[0;32m      3\u001b[0m num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m lista_num[indice]:\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
-   "source": [
-    "lista_num = [5, 15, 20, 33, 65, 89, 10]\n",
-    "indice = lista_num[range(len)]\n",
-    "num2 = 0\n",
-    "\n",
-    "for n in lista_num[indice]:\n",
-    "    num2 = num2 * n\n",
-    "    print(num2)"
    ]
   },
   {
@@ -281,23 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]\n"
      ]
     }
    ],
    "source": [
     "lista1 = []\n",
-    "\n",
-    "for e in range(1,51):\n",
-    "    if e >=1:\n",
-    "        if e%e == 1 or e%e == e:\n",
+    "for e in range(1, 51):\n",
+    "    if e > 1:\n",
+    "        es_primo = True\n",
+    "        for i in range(2, e):  \n",
+    "            if e % i == 0:\n",
+    "                es_primo = False\n",
+    "                break\n",
+    "        if es_primo:\n",
     "            lista1.append(e)\n",
     "print(lista1)"
    ]
@@ -306,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Calcular el factorial de un número utilizando un bucle for\n",
+    "7. Calcular el factorial de un número utilizando un bucle for.\n",
     "Descripción: Dado un número entero positivo, calcula su factorial utilizando un bucle for.\n"
    ]
   },
@@ -388,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# list comprehension"
+    "# List comprehension"
    ]
   },
   {
@@ -491,74 +468,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "valor no encontrado\n"
+      "['ana', 'almu', 'andrea']\n",
+      "fatima\n"
      ]
     }
    ],
    "source": [
-    "nombres = input(\"Introducce una lista de nombres\")\n",
-    "nombre = input(\"Introducce un nombre\")\n",
+    "nombres = input(\"Introducce una lista de nombres:\")\n",
+    "nombre = input(\"Introducce un nombre:\")\n",
     "\n",
-    "lista_nombres = list(nombres.split())\n",
-    "\n",
+    "lista_nombres = nombres.split()\n",
     "\n",
     "try:\n",
-    "    nombre in lista_nombres\n",
-    "    print(f(\"{nombre} esta en la lista\"))\n",
-    "\n",
+    "    if nombre in lista_nombres:\n",
+    "        print(f\"{nombre} esta en la lista\")\n",
+    "     else:\n",
+    "        print(f\"{nombre} no está en la lista\")              \n",
     "except:\n",
-    "    print(\"valor no encontrado\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "valor no encontrado\n",
-      "['susana', 'alba', 'carla', 'ana']\n",
-      "ana\n"
-     ]
-    }
-   ],
-   "source": [
-    "nombres = input(\"Introducce una lista de nombres\")\n",
-    "nombre = input(\"Introducce un nombre\")\n",
-    "\n",
-    "lista_nombres = list(nombres.split())\n",
-    "\n",
-    "\n",
-    "\n",
-    "for e in lista_nombres:\n",
-    "    try:\n",
-    "        if e in nombre:\n",
-    "            print(f(\"{nombre} esta en la lista\"))\n",
-    "\n",
-    "    except:\n",
-    "        print(\"valor no encontrado\")\n",
+    "    print(\"valor no encontrado\")\n",
     "\n",
     "\n",
     "print(lista_nombres)\n",
     "print(nombre)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -577,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
