--- a/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PAIR PROGRAMMING Clases\n"
+    "# PAIR PROGRAMMING - Clases\n"
    ]
   },
   {
