--- a/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,10 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class Empleados:\n",
     "\n",
     "    def __init__(self, nombre, apellidos, edad, posicion, año, vacaciones, herramientas):\n",
@@ -138,10 +139,106 @@
     "                    self.herramientas.append(h)\n",
     "                    return f\"{h} ha sido agregada a tu lista de habilidades\"\n",
     "                \n",
-    "\n",
-    "\n",
+    "    def cambiar_posicion(self,nueva_posicion,nuevo_salario):\n",
+    "        \n",
+    "        self.posicion = nueva_posicion\n",
+    "        self.salario = nuevo_salario\n",
+    "        \n",
+    "        return f\"El salario ha sido actualizado a {self.salario}, debido a la posicion de {nueva_posicion}\"\n",
+    "    \n",
+    "    def tomar_vacaciones(self,solicitar):\n",
+    "        \n",
+    "        solicitar = int(input(\"¿Cuantos dias quieres pedir?:\"))\n",
+    "        \n",
+    "        while solicitar >0:\n",
+    "            if self.vacaciones <= solicitar:\n",
+    "                self.vacaciones -= solicitar\n",
+    "                return f\"Vacaciones validas. Te quedan {self.vacaciones} dias disponibles\"\n",
+    "            else:\n",
+    "                return \"Error, no tienes suficienes días disponibles\"\n",
+    "        \n",
+    "        return f\"El número de días solicitado no es válido, ingrese de nuevo su solicitud {solicitar}\"\n",
+    "    \n",
+    "    def solicitar_aumento_salario(self,aumento):\n",
+    "        aumento = float(input(\"Ingrese el porcentaje de aumento:\"))\n",
+    "        \n",
+    "        try:\n",
+    "            if aumento >= 0:\n",
+    "                porcentaje = aumento /100\n",
+    "                nuevo_salario = (self.salario * porcentaje) + self.salario\n",
+    "                self.salario = nuevo_salario\n",
+    "                return f\"El salario ha sido actualizado, actualmente cobraras {self.salario}\"\n",
     "                \n",
+    "            else:\n",
+    "                return \"Error, su salario no ha sido actualizado\"\n",
+    "                \n",
+    "        except TypeError:\n",
+    "            print(\"debe ingresar un número válido\")\n",
+    "                \n",
+    "        except ZeroDivisionError:\n",
+    "            print(\"no se puede dividir entre cero\")\n",
+    "        \n",
+    "        except ValueError:\n",
+    "            print(\"Error, no    debe ingresar un número válido\")\n",
+    "\n",
+    "    def realizar_evaluacion(self, calificacion):\n",
+    "        \n",
+    "        calificacion = input(\"Califique su propio desempeño siendo calificado como (excelente, bueno, regular o malo):\").lower()\n",
+    "        calificaciones_optimas = [\"excelente\", \"bueno\", \"regular\", \"malo\"]\n",
+    "        avanza = True\n",
+    "        \n",
+    "        if calificacion in calificaciones_optimas:\n",
+    "            avanza = True\n",
+    "        else:\n",
+    "            avanza = False\n",
+    "        \n",
+    "        while avanza:        \n",
+    "            if calificacion == \"excelente\":\n",
+    "                return \"Gracias por tu trabajo\"\n",
+    "            \n",
+    "            elif calificacion == \"bueno\":\n",
+    "                return \"Buen trabajo, sigue así de bien\"\n",
+    "            \n",
+    "            elif calificacion == \"regular\":\n",
+    "                return \"Intenta mejorar las habilidades flojas\"\n",
+    "            else: \n",
+    "                return \"Necesitas mejorar\"\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gerente(Empleados):\n",
+    "    \n",
+    "    def __init__(self, nombre, apellidos, edad, posicion, año, vacaciones, herramientas):\n",
+    "        super().__init__(nombre, apellidos, edad, posicion, año, vacaciones, herramientas, departamento)\n",
+    "        self.departamento = departamento\n",
+    "        self.empleados = []\n",
+    "    \n",
+    "    def asignar_tareas(self, tarea, empleado):\n",
+    "        self.empleados.append(empleado)     \n",
+    "        \n",
+    "        return f\"El gerente ha asignado la tarea \"{tarea}\" a \"{empleado}\"\n",
+    "    \n",
+    "    def revisar_desempeño_empleado(self,empleado):\n",
+    "    \n",
+    "        return f\"El gerente esta revisando el desempeño del \"{empleado}\"\n",
+    "    \n",
+    "    def gestionar_empleados(self, accion, empleado):\n",
+    "        if accion == \"contratar\":\n",
+    "            self.empleados.append(empleado)\n",
+    "            return f\"el {empleado} ha sido contratado\"\n",
+    "        \n",
+    "        elif accion == \"despedir\":\n",
+    "            self.empleados.pop(empleado)\n",
+    "            return f\"el {empleado} ha sido despedido\"\n",
+    "        \n",
+    "        else:\n",
+    "            return \"Error: la acción no es válida\""
    ]
   }
  ],
@@ -161,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
