--- a/promog-modulo1-sprint2-pair programming-leccion05-sentencias_de_control_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion05-sentencias_de_control_Rebeca-Beatriz.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PAIR PROGRAMMING - Sentencias de control\n",
     "\n",
-    "### Bucle FOR"
+    "--EJERCICIOS BUCLE FOR--"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List comprehension"
+    "-- EJERCICIOS LIST COMPREHENSION--"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# try ...except"
+    "--EJERCICIOS try ...except--"
    ]
   },
   {
@@ -516,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
