--- a/promog-modulo1-sprint2-pair programming-leccion06-funciones- Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion06-funciones- Rebeca-Beatriz.ipynb
@@ -420,36 +420,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def num_repetidos(lista_num):\n",
-    "\n",
+    "def encontrar_duplicados(lista_num):\n",
+    "    duplicados = []\n",
     "    lista_numeros1= []\n",
     "\n",
     "    for num in lista_num:\n",
     "        if num not in lista_numeros1:\n",
     "            lista_numeros1.append(num)\n",
     "        else:\n",
-    "            return num"
+    "            if num not in duplicados:\n",
+    "                duplicados.append(num)\n",
+    "    return duplicados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "[2]\n"
      ]
     }
    ],
    "source": [
-    "print(num_repetidos([1,2,3,4,5,6,7,2]))"
+    "print(encontrar_duplicados([1,2,3,4,5,6,7,2]))"
    ]
   }
  ],
@@ -469,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
