--- a/promog-modulo1-sprint2-pair programming-leccion05-sentencias_de_control_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion05-sentencias_de_control_Rebeca-Beatriz.ipynb
@@ -468,35 +468,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ana', 'almu', 'andrea']\n",
-      "fatima\n"
+      "almu está en la lista\n",
+      "Lista de nombres: ['ana', 'almu', 'alba']\n",
+      "Nombre a buscar: almu\n"
      ]
     }
    ],
    "source": [
-    "nombres = input(\"Introducce una lista de nombres:\")\n",
+    "nombres = input(\"Introduce una lista de nombres:\")\n",
     "nombre = input(\"Introducce un nombre:\")\n",
     "\n",
     "lista_nombres = nombres.split()\n",
     "\n",
     "try:\n",
     "    if nombre in lista_nombres:\n",
-    "        print(f\"{nombre} esta en la lista\")\n",
-    "     else:\n",
+    "        print(f\"{nombre} está en la lista\")\n",
+    "    else:\n",
     "        print(f\"{nombre} no está en la lista\")              \n",
-    "except:\n",
-    "    print(\"valor no encontrado\")\n",
+    "except ValueError:\n",
+    "    print(\"Error: valor no encontrado\")\n",
     "\n",
     "\n",
-    "print(lista_nombres)\n",
-    "print(nombre)"
+    "print(\"Lista de nombres:\", lista_nombres)\n",
+    "print(\"Nombre a buscar:\", nombre)"
    ]
   }
  ],
@@ -516,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
