--- a/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
@@ -117,7 +117,7 @@
     "            mes_actual = datetime.now().month\n",
     "        \n",
     "            antiguedad_año = año_actual-self.año\n",
-    "            antiguedad_mes = mes_actual-mes  #revisar negativos\n",
+    "            antiguedad_mes = mes_actual #revisar negativos\n",
     "        \n",
     "            return f\"El trabajador entro en el año {self.año} y actualmente tiene una antiguedad de {antiguedad_año} años y {antiguedad_mes} meses\"\n",
     "\n",
@@ -168,18 +168,10 @@
     "                nuevo_salario = (self.salario * porcentaje) + self.salario\n",
     "                self.salario = nuevo_salario\n",
     "                return f\"El salario ha sido actualizado, actualmente cobraras {self.salario}\"\n",
-    "                \n",
     "            else:\n",
-    "                return \"Error, su salario no ha sido actualizado\"\n",
-    "                \n",
-    "        except TypeError:\n",
-    "            print(\"debe ingresar un número válido\")\n",
-    "                \n",
-    "        except ZeroDivisionError:\n",
-    "            print(\"no se puede dividir entre cero\")\n",
-    "        \n",
+    "                return \"Error, su salario no ha sido actualizado\"            \n",
     "        except ValueError:\n",
-    "            print(\"Error, no    debe ingresar un número válido\")\n",
+    "            print(\"Error, debe ingresar un número válido\")\n",
     "\n",
     "    def realizar_evaluacion(self, calificacion):\n",
     "        \n",
