--- a/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,19 +386,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El * del cliente es John Doe y su dirección es 123 Main Street.\n",
+      "El nombre del cliente es John Doe y su * es 123 Main Street.\n"
+     ]
+    }
+   ],
    "source": [
     "texto = 'El nombre del cliente es John Doe y su dirección es 123 Main Street.'\n",
     "\n",
-    "patron10 = \n",
+    "patron10 = r'\\bnombre\\b'\n",
     "\n",
-    "patron11 = \n",
+    "patron11 = r'\\bdirección\\b'\n",
     "\n",
-    "cadena_informacion = re.sub(patron10, \"*\", texto)\n",
+    "cadena_informacion10 = re.sub(patron10, \"*\", texto)\n",
+    "cadena_informacion11 = re.sub(patron11, \"*\", texto)\n",
     "\n",
-    "print(cadena_informacion)"
+    "print(cadena_informacion10)\n",
+    "print(cadena_informacion11)"
    ]
   }
  ],
@@ -418,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
