Modificacion clases y repaso OK

--- a/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion07-clases_Rebeca-Beatriz.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,18 +107,24 @@
     "    def cambiando_posicion(self):\n",
     "\n",
     "        for h in self.herramientas:\n",
-    "            if h == \"python\":\n",
+    "            if h.lower() == \"python\":\n",
     "                return \"Enhorabuena estas actualizado\"\n",
-    "            else:\n",
-    "                return \"Tenemos formacion a tu disposicion para actualizarte\"\n",
+    "            \n",
+    "            elif h.lower() == \"excel\":\n",
+    "                return \"Deberias aprender Python\"\n",
+    "\n",
     "\n",
     "    def calcular_antiguedad(self,mes):\n",
     "            año_actual = datetime.now().year\n",
     "            mes_actual = datetime.now().month\n",
     "        \n",
     "            antiguedad_año = año_actual-self.año\n",
-    "            antiguedad_mes = mes_actual #revisar negativos\n",
-    "        \n",
+    "            antiguedad_mes = mes_actual-mes\n",
+    "            \n",
+    "            if antiguedad_mes < 0:\n",
+    "                antiguedad_año -= 1\n",
+    "                antiguedad_mes += 12\n",
+    "\n",
     "            return f\"El trabajador entro en el año {self.año} y actualmente tiene una antiguedad de {antiguedad_año} años y {antiguedad_mes} meses\"\n",
     "\n",
     "    def solicitar_aumento_vacaciones(self,dias_solicitados):\n",
@@ -131,13 +137,14 @@
     "                return \"La solicitud no ha sido aprobada, porque lo dias de los que disponias estaban en negativo\"\n",
     "    \n",
     "    def registrar_herramienta(self,nueva_herramienta):\n",
-    "    \n",
-    "           for h in self.herramientas:\n",
-    "                if h.lower() == nueva_herramienta.lower:\n",
-    "                    return \"La herramienta ya estaba registrada en tus habilidades\"\n",
-    "                else:\n",
-    "                    self.herramientas.append(h)\n",
-    "                    return f\"{h} ha sido agregada a tu lista de habilidades\"\n",
+    "\n",
+    "        if nueva_herramienta.lower() not in self.herramientas:\n",
+    "            self.herramientas.append(nueva_herramienta.lower())\n",
+    "            print(f\"{nueva_herramienta} ha sido agregada a tu lista de habilidades\")\n",
+    "\n",
+    "        else:\n",
+    "            print(\"La herramienta ya estaba registrada en tus habilidades\")\n",
+    "                \n",
     "                \n",
     "    def cambiar_posicion(self,nueva_posicion,nuevo_salario):\n",
     "        \n",
@@ -146,91 +153,315 @@
     "        \n",
     "        return f\"El salario ha sido actualizado a {self.salario}, debido a la posicion de {nueva_posicion}\"\n",
     "    \n",
-    "    def tomar_vacaciones(self,solicitar):\n",
-    "        \n",
-    "        solicitar = int(input(\"¿Cuantos dias quieres pedir?:\"))\n",
-    "        \n",
-    "        while solicitar >0:\n",
-    "            if self.vacaciones <= solicitar:\n",
-    "                self.vacaciones -= solicitar\n",
-    "                return f\"Vacaciones validas. Te quedan {self.vacaciones} dias disponibles\"\n",
-    "            else:\n",
-    "                return \"Error, no tienes suficienes días disponibles\"\n",
-    "        \n",
-    "        return f\"El número de días solicitado no es válido, ingrese de nuevo su solicitud {solicitar}\"\n",
-    "    \n",
-    "    def solicitar_aumento_salario(self,aumento):\n",
-    "        aumento = float(input(\"Ingrese el porcentaje de aumento:\"))\n",
-    "        \n",
-    "        try:\n",
-    "            if aumento >= 0:\n",
-    "                porcentaje = aumento /100\n",
-    "                nuevo_salario = (self.salario * porcentaje) + self.salario\n",
-    "                self.salario = nuevo_salario\n",
-    "                return f\"El salario ha sido actualizado, actualmente cobraras {self.salario}\"\n",
-    "            else:\n",
-    "                return \"Error, su salario no ha sido actualizado\"            \n",
-    "        except ValueError:\n",
-    "            print(\"Error, debe ingresar un número válido\")\n",
+    "    def tomar_vacaciones(self):\n",
     "\n",
-    "    def realizar_evaluacion(self, calificacion):\n",
+    "        vacaciones_solicitadas = False\n",
+    "\n",
+    "        solicitar= int(input(\"¿Cuantos dias quieres solicitar?\"))\n",
+    "\n",
+    "        while vacaciones_solicitadas == False:\n",
+    "\n",
+    "            if solicitar <=0:\n",
+    "    \n",
+    "                print(f\"El numero de dias introduccidos es incorrecto {solicitar}\")\n",
+    "                solicitar = int(input(\"¿Cuantos dias quieres solicitar?\"))\n",
     "        \n",
-    "        calificacion = input(\"Califique su propio desempeño siendo calificado como (excelente, bueno, regular o malo):\").lower()\n",
+    "            elif self.vacaciones >= solicitar:\n",
+    "                self.vacaciones -= solicitar\n",
+    "                vacaciones_solicitadas= True\n",
+    "                print (\"Vacaciones autorizadas\")\n",
+    "                \n",
+    "            else:\n",
+    "                print(\"Error, no tienes suficienes días disponibles\")\n",
+    "                \n",
+    "                solicitar = int(input(\"¿Cuantos dias quieres pedir?:\"))\n",
+    "\n",
+    "            \n",
+    "    \n",
+    "    def solicitar_aumento_salario(self):\n",
+    "\n",
+    "        aumento_valido = False\n",
+    "\n",
+    "        while aumento_valido==False:\n",
+    "            try:\n",
+    "                aumento = float(input(\"Ingrese el porcentaje de aumento:\"))\n",
+    "            \n",
+    "            except:\n",
+    "                print(\"Valor introduccido incorrecto, indique nuevamente el importe\")\n",
+    "\n",
+    "            else:\n",
+    "\n",
+    "                if aumento >= 0:\n",
+    "                    porcentaje = aumento /100\n",
+    "                    nuevo_salario = (self.salario * porcentaje) + self.salario\n",
+    "                    self.salario = nuevo_salario\n",
+    "                    aumento_valido = True\n",
+    "                    return f\"El salario ha sido actualizado, actualmente cobraras {self.salario}\"\n",
+    "                \n",
+    "\n",
+    "    def realizar_evaluacion(self):\n",
+    "        \n",
+    "        calificacion= \"\"\n",
     "        calificaciones_optimas = [\"excelente\", \"bueno\", \"regular\", \"malo\"]\n",
-    "        avanza = True\n",
+    "        avanza = False\n",
+    "\n",
+    "        while avanza == False:  \n",
+    "            if calificacion in calificaciones_optimas:\n",
+    "                avanza= True\n",
+    "                           \n",
+    "            else:\n",
+    "                calificacion = input(\"Califique su propio desempeño siendo calificado como (excelente, bueno, regular o malo):\").lower()\n",
     "        \n",
-    "        if calificacion in calificaciones_optimas:\n",
-    "            avanza = True\n",
-    "        else:\n",
-    "            avanza = False\n",
+    "        if calificacion == \"excelente\":\n",
+    "            return \"Gracias por tu trabajo\"\n",
+    "                \n",
+    "        elif calificacion == \"bueno\":\n",
+    "            return \"Buen trabajo, sigue así de bien\"\n",
+    "                \n",
+    "        elif calificacion == \"regular\":\n",
+    "            return \"Intenta mejorar las habilidades flojas\"\n",
+    "        else: \n",
+    "            return \"Necesitas mejorar\"\n",
     "        \n",
-    "        while avanza:        \n",
-    "            if calificacion == \"excelente\":\n",
-    "                return \"Gracias por tu trabajo\"\n",
-    "            \n",
-    "            elif calificacion == \"bueno\":\n",
-    "                return \"Buen trabajo, sigue así de bien\"\n",
-    "            \n",
-    "            elif calificacion == \"regular\":\n",
-    "                return \"Intenta mejorar las habilidades flojas\"\n",
-    "            else: \n",
-    "                return \"Necesitas mejorar\"\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gerente(Empleados):\n",
     "    \n",
-    "    def __init__(self, nombre, apellidos, edad, posicion, año, vacaciones, herramientas):\n",
-    "        super().__init__(nombre, apellidos, edad, posicion, año, vacaciones, herramientas, departamento)\n",
+    "    def __init__(self, nombre, apellidos, edad, posicion, año, vacaciones, herramientas, departamento,empleados_a_cargo):\n",
+    "        super().__init__(nombre, apellidos, edad, posicion, año, vacaciones, herramientas)\n",
     "        self.departamento = departamento\n",
-    "        self.empleados = []\n",
+    "        self.empleados_a_cargo = empleados_a_cargo\n",
     "    \n",
-    "    def asignar_tareas(self, tarea, empleado):\n",
-    "        self.empleados.append(empleado)     \n",
-    "        \n",
-    "        return f\"El gerente ha asignado la tarea \"{tarea}\" a \"{empleado}\"\n",
+    "    def asignar_tareas(self, tarea, empleados_a_cargo):\n",
+    "        return f\"El gerente ha asignado la tarea {tarea} a {empleados_a_cargo}\"\n",
     "    \n",
-    "    def revisar_desempeño_empleado(self,empleado):\n",
+    "    def revisar_desempeño_empleado(self,empleados_a_cargo):\n",
     "    \n",
-    "        return f\"El gerente esta revisando el desempeño del \"{empleado}\"\n",
+    "        return f\"El gerente esta revisando el desempeño del {empleados_a_cargo}\"\n",
     "    \n",
     "    def gestionar_empleados(self, accion, empleado):\n",
-    "        if accion == \"contratar\":\n",
-    "            self.empleados.append(empleado)\n",
-    "            return f\"el {empleado} ha sido contratado\"\n",
-    "        \n",
-    "        elif accion == \"despedir\":\n",
-    "            self.empleados.pop(empleado)\n",
-    "            return f\"el {empleado} ha sido despedido\"\n",
-    "        \n",
-    "        else:\n",
-    "            return \"Error: la acción no es válida\""
+    "      \n",
+    "            if accion == \"contratar\":\n",
+    "                self.empleados.append(empleado)\n",
+    "                return f\"el {empleado} ha sido contratado\"\n",
+    "            \n",
+    "            elif accion == \"despedir\": \n",
+    "                if empleado in self.empleados_a_cargo:\n",
+    "                    self.empleados_a_cargo.pop(empleado)\n",
+    "                    return f\"el {empleado} ha sido despedido\"\n",
+    "                \n",
+    "            else:\n",
+    "                return \"Error: la acción no es válida\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empleado1=Empleados(\"rebeca\",\"enriquez\",30,\"auxiliar\",2023,16,[\"excel\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El empleado con nombre rebeca, que ocupa la posicion auxiliar, desde el año 2023, tiene pendientes de disfrutar 16 dias de vacaciones'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Metodo1\n",
+    "empleado1.descripcion()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deberias aprender Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Metodo2\n",
+    "print(empleado1.cambiando_posicion())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El trabajador entro en el año 2023 y actualmente tiene una antiguedad de 0 años y 2 meses'"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Metodo3\n",
+    "empleado1.calcular_antiguedad(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La solicitud ha sido aprobada, actualmente dispones de 30 dias de vacaciones'"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Metodo4\n",
+    "empleado1.solicitar_aumento_vacaciones(14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python ha sido agregada a tu lista de habilidades\n",
+      "['excel', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Metodo5\n",
+    "empleado1.registrar_herramienta(\"python\")\n",
+    "print(empleado1.herramientas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El salario ha sido actualizado a 1500, debido a la posicion de oficial1º'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Metodo6\n",
+    "empleado1.cambiar_posicion(\"oficial1º\",1500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "El numero de dias introduccidos es incorrecto -4\n",
+      "El numero de dias introduccidos es incorrecto 0\n",
+      "Vacaciones autorizadas\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Metodo7\n",
+    "print(empleado1.vacaciones)\n",
+    "empleado1.tomar_vacaciones()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor introduccido incorrecto, indique nuevamente el importe\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'El salario ha sido actualizado, actualmente cobraras 1725.0'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Metodo8\n",
+    "empleado1.solicitar_aumento_salario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Necesitas mejorar'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Metodo9\n",
+    "empleado1.realizar_evaluacion()\n"
    ]
   }
  ],
@@ -250,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
