--- a/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
+++ b/promog-modulo1-sprint2-pair programming-leccion08-regex-Rebeca-Beatriz.ipynb
@@ -386,27 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El * del cliente es John Doe y su dirección es 123 Main Street.\n",
-      "El nombre del cliente es John Doe y su * es 123 Main Street.\n"
+      "El * del cliente es John Doe y su direccion es 123 Main Street.\n",
+      "El * del cliente es John Doe y su direccion es 123 Main Street.\n"
      ]
     }
    ],
    "source": [
-    "texto = 'El nombre del cliente es John Doe y su dirección es 123 Main Street.'\n",
+    "texto = 'El nombre del cliente es John Doe y su direccion es 123 Main Street.'\n",
     "\n",
     "patron10 = r'\\bnombre\\b'\n",
     "\n",
     "patron11 = r'\\bdirección\\b'\n",
     "\n",
     "cadena_informacion10 = re.sub(patron10, \"*\", texto)\n",
-    "cadena_informacion11 = re.sub(patron11, \"*\", texto)\n",
+    "cadena_informacion11 = re.sub(patron11, \"*\", cadena_informacion10)\n",
     "\n",
     "print(cadena_informacion10)\n",
     "print(cadena_informacion11)"
@@ -429,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
